# smarty-bot

./: README.md  main.py  pyproject.toml
utils/: rag_utils.py
